# autograde

./: AGENTS.md  README.md  pyproject.toml
specs/: spec-autograde.md
src/autograde/: __init__.py  __main__.py  cli.py
tests/: tests_autograde.py
