[project]
name = "autograde"
version = "0.1.0"
description = "A CLI tool that inspects a Git repository and reports whether required conditions hold."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []
 
[project.scripts]
autograde = "autograde.cli:main"
 
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
 
[tool.hatch.build.targets.wheel]
packages = ["src/autograde"]
 
[tool.pytest.ini_options]
testpaths = ["tests"]